--- a/Mod1/Mod1/Develop/assets/css/style.css
+++ b/Mod1/Mod1/Develop/assets/css/style.css
@@ -16,35 +16,22 @@ body {
 }
 
 .header h1 {
-    display: inline-block;
+    font-weight: bold;
+    margin: 0;
     font-size: 48px;
 }
 
-.header h1 .seo {
-    color: #d9dcd6;
-}
-
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
-}
-
-.header div ul {
-    list-style-type: none;
-}
-
-.header div ul li {
+    color: #ffffff;
     display: inline-block;
     margin-left: 25px;
 }
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
 
 p {
     font-size: 16px;
