--- a/Mod1/Mod1/Develop/assets/css/style.css
+++ b/Mod1/Mod1/Develop/assets/css/style.css
@@ -8,36 +8,42 @@ body {
     background-color: #d9dcd6;
 }
 
-header {
+.header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-header h1 {
-    font-weight: bold;
-    margin: 0;
+.header h1 {
+    display: inline-block;
     font-size: 48px;
 }
-header a {
-  text-decoration: none;
-  color: #ffffff;
+
+.header h1 .seo {
+    color: #d9dcd6;
 }
 
-header nav {
-  float: right;
-  margin: 0;
+.header div {
+    padding-top: 15px;
+    margin-right: 20px;
+    float: right;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
 }
 
-header nav ul li {
-   display: inline;
+.header div ul {
+    list-style-type: none;
 }
 
- header nav ul li a {
-  margin: 0 30px;
-  font-weight: lighter;
-  font-size: 22px;
+.header div ul li {
+    display: inline-block;
+    margin-left: 25px;
+}
+
+a {
+    color: #ffffff;
+    text-decoration: none;
 }
 
 p {
