--- a/Mod1/Mod1/Develop/assets/css/style.css
+++ b/Mod1/Mod1/Develop/assets/css/style.css
@@ -5,26 +5,24 @@
 }
 
 body {
-    background-color: #d9dcd6;
+    background-color: #d9dcd9;
 }
 
-.header {
+/*Changing CSS and Condensing it to contain multiple elements */
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
+    color: #ffffff;
 }
 
-.header h1 .seo {
-    color: #d9dcd6;
-}
-
-.header div {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +30,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -50,6 +48,7 @@ p {
     font-size: 16px;
 }
 
+/*Establishing Primary Background Picture */
 .hero {
     height: 800px;
     width: 100%;
