--- a/Mod1/Mod1/Develop/assets/css/style.css
+++ b/Mod1/Mod1/Develop/assets/css/style.css
@@ -59,17 +59,6 @@ p {
 }
 
 /*Refactoring Services Section CSS*/
-
-.text-float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-.text-float-right {
-    float: right;
-    margin-left: 25px;
-}
-
 .float-left {
     width: 35%;
     float: left;
@@ -82,11 +71,25 @@ p {
 
 .services {
     width: 75%;
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
     display: inline-block;
-    margin-left: 20px;
-    background-color: #2a607c;
 }
 
+/* Consolidated Repeating Image and Text CSS into Single Sections */
+.services h2 {
+    font-size: 36px;
+}
+
+.services img {
+    max-height: 200px;
+}
+
+/* Benefits Section Refactoring - Consolidating Repeating CSS */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -98,91 +101,20 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-title {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit-title h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
 }
 
 .search-engine-optimization h2 {
